--- a/Project/electricity-provider/templates/ui_contract_page.html
+++ b/Project/electricity-provider/templates/ui_contract_page.html
@@ -1,7 +1,7 @@
 {%  extends "base.html" %}
 
 {% block titel %}
-Login
+Contract
 {% endblock %}
 
 
@@ -35,6 +35,9 @@ Login
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/logout/">Logout</a>
+        </li>
+        <li class="nav-item" style="margin-left: 40px;">
+          <a class="btn btn-primary" href="/contract/new">Create Contract</a>
         </li>
       </ul>
     </div>
@@ -71,10 +74,6 @@ Login
 </div>
 
 
-<div class="d-flex justify-content-center" style="margin-top: 20px;">
-  <a type="button" class="btn btn-primary" href="/contract/new/">Create Contract</a>
-</div>
-
 {% for contract in contracts %}
 <div class="container mt-md mb-md">
   <div class="row">
@@ -91,9 +90,9 @@ Login
                 <div class="card-body">
                     <div class="row mb-md" style="border-bottom: 2px solid #DFDFDF;">
                         <div class="col" style="margin-left: 200px; margin-bottom:20px;">
-                            Vetragsinhaber: <br>
-                            Vertragsdauer: <br>
-                            Kosten:
+                            Contract owner: <br>
+                            Contract duration: <br>
+                            Costs:
                         </div>
                         <div class="col">
                           {{contract.user.first_name}} {{contract.user.last_name}} <br>
@@ -104,7 +103,7 @@ Login
 
                     <div class="row mb-md" style="border-bottom: 2px solid #DFDFDF; margin-bottom: 20px;">
                       <div class="col" style="margin-left: 200px;">
-                          Adresse:
+                          Adress:
                       </div>
                       <div class="col" style="margin-bottom:20px;">
                         {{contract.user.first_name}} {{contract.user.last_name}} <br>
@@ -114,7 +113,7 @@ Login
                     </div>
 
                   <div class="row mb-md" style="border-bottom: 2px solid #DFDFDF; margin-bottom: 20px;">
-                    <div class="col" style="margin-left: 200px;">                              Rechnungsadresse:
+                    <div class="col" style="margin-left: 200px;">                             Billing adress:
                     </div>
                       <div class="col" style="margin-bottom:20px;">
                         {{contract.user.first_name}} {{contract.user.last_name}} <br>
@@ -125,7 +124,9 @@ Login
 
                   <div class="row mb-md" style="border-bottom: 2px solid #DFDFDF; margin-bottom: 20px;">
                       <div class="col" style="margin-left: 200px;">
-                          Bankdaten:
+                          Bank account owner: <br>
+                          IBAN: <br>
+                          BLZ:
                       </div>
                       <div class="col" style="margin-bottom:20px">
                         {{contract.user.first_name}} {{contract.user.last_name}}<br>
