--- a/Project/electricity-provider/templates/ui_contract_page.html
+++ b/Project/electricity-provider/templates/ui_contract_page.html
@@ -69,10 +69,27 @@ Login
         </div>
     </div>
 </div>
-
+<!-- Code für die Ansicht, dass es versuchte Loginversuche gab, muss auf das USER DASHBOARD!!! 
+<div class="modal fade" id="testForFailedLogin" tabindex="-1" aria-labelledby="modalTitle" aria-hidden="true">
+  <div class="modal-dialog">
+      <div class="modal-content">
+          <div class="modal-header">
+              <h5 class="modal-title" id="modalTitle">Warnung!</h5>
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body">
+              <p id="modalMessage" style="font-size: 20px;">
+                Es gab <strong>{{ failed_login_attempts }}</strong> fehlgeschlagene Anmeldeversuche seid ihrem letzten Login!
+              </p>
+          </div>
+      </div>
+  </div>
+</div>
+-->
 
 <div class="d-flex justify-content-center" style="margin-top: 20px;">
   <a type="button" class="btn btn-primary" href="/contract/new/">Create Contract</a>
+  <!-- Link für das Fenster oben <a href="#" data-bs-toggle="modal" data-bs-target="#testForFailedLogin">Test</a> -->
 </div>
 
 {% for contract in contracts %}
@@ -136,7 +153,7 @@ Login
 
                   <div class="row">
                     <div class="col" style="text-align: center;">
-                      <a type="button" class="btn btn-primary" href="/customer/">Create Contract</a>
+                      <a type="button" class="btn btn-primary" href="/customer/">Zur Stromübersicht</a>
                       <button type="button" id="cancelContract" data-contract-id="{{ contract.id }}" class="btn btn-danger">Cancel Contract</button>
                     </div>
                   </div>
