--- a/Project/electricity-provider/templates/ui_customer_page.html
+++ b/Project/electricity-provider/templates/ui_customer_page.html
@@ -43,117 +43,133 @@ Dashboard
 
 {% block body %}
 
+<script>
+
+function display_month_chart(counter, measurement_data){
+    let values_month = measurement_data
+
+    var ctx1 = document.getElementById('myLineChart_month_'+counter).getContext('2d');
+    var myLineChart1 = new Chart(ctx1, {
+        type: 'line',
+        data: {
+            labels: values_month['data'].map(messwert => {
+                let date = new Date(messwert.time);
+                return date.toLocaleDateString('de-DE') + ' - ' + date.toLocaleTimeString('de-DE', { hour: '2-digit', minute: '2-digit' });
+            }),                                                             
+            datasets: [{
+                label: 'Stromverbrauch in kW/h',
+                data: values_month['data'].map(messwert => messwert.value),
+                borderColor: 'rgba(175, 235, 173)',
+                backgroundColor: 'rgba(175, 235, 173, 0.5)',
+                fill: true
+            }]
+        },
+        options: {
+            plugins: {
+                title: {
+                    display: true,
+                    text: 'Monatsansicht',
+                    position: 'top',
+                    font: {
+                        size: 20, 
+                    },
+                },
+            },
+            responsive: true,
+            scales: {
+                y: {
+                    beginAtZero: true,
+                    ticks: {
+                        stepSize: 200,
+                        min: 0,
+                        max: 18
+                    }
+                }
+            },  
+        }
+    });
+}
+
+
+function display_day_chart(counter, measurement_data){
+    let values_day = measurement_data
+    
+    var ctx2 = document.getElementById('myLineChart_day_'+counter).getContext('2d');
+    var myLineChart2 = new Chart(ctx2, {
+        type: 'line',
+        data: {
+            labels: values_day['data'].map(messwert => {
+                let date = new Date(messwert.time);
+                return date.toLocaleDateString('de-DE') + ' - ' + date.toLocaleTimeString('de-DE', { hour: '2-digit', minute: '2-digit' });
+            }),                                                             
+            datasets: [{
+                label: 'Stromverbrauch in kW/h',
+                data: values_day['data'].map(messwert => messwert.value),
+                borderColor: 'rgba(175, 235, 173)',
+                backgroundColor: 'rgba(175, 235, 173, 0.5)',
+                fill: true
+            }]
+        },
+        options: {
+            plugins: {
+                title: {
+                    display: true,
+                    text: 'Tagesansicht',
+                    position: 'top',
+                    font: {
+                        size: 20, 
+                    },
+                },
+            },
+            responsive: true,
+            scales: {
+                y: {
+                    beginAtZero: true,
+                    ticks: {
+                        stepSize: 200,
+                        min: 0,
+                        max: 18
+                    }
+                }
+            },  
+        }
+    });
+}
+
+
+</script>
+
 <div class="container" style="margin-top: 20px;">
     <div class="row">
         <div class="col align">
+            {% for contract in contracts %}
             <div class="card">
-                <div class="card-header d-flex justify-content-between" data-bs-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
-                    <div>Zähler xx</div>
+                <div class="card-header d-flex justify-content-between" data-contract-id="{{ contract.id }}" data-bs-toggle="collapse" href="#collapseExample{{ forloop.counter }}" role="button" aria-expanded="false" aria-controls="collapseExample{{ forloop.counter }}">
+                    <div>Zähler: {{ contract.measurement_point.meter_uid }}</div>
                     <!-- hier muss die Anzeige hin welchen Status der Zähler hat -->
                     <div>last_reading</div>
                     <div>last_reading_date</div>
                 </div>
 
-                <div class="collapse" id="collapseExample">
+                <div class="collapse" id="collapseExample{{forloop.counter}}">
                     <div class="card-body">
 
                         <!-- Erstes Diagramm: Montasansicht -->
-                        <canvas id="myLineChart1" style="width:100%; height: 100px;"></canvas>
+                        <canvas id="myLineChart_month_{{forloop.counter}}" style="width:100%; height: 100px;"></canvas>
                         <script>
-
-                            const values = {{ messwerte|safe }}
-
-                            var ctx1 = document.getElementById('myLineChart1').getContext('2d');
-                            var myLineChart1 = new Chart(ctx1, {
-                                type: 'line',
-                                data: {
-                                    labels: values.map(messwert => {
-                                        let date = new Date(messwert.timestamp);
-                                        return date.toLocaleDateString('de-DE') + ' - ' + date.toLocaleTimeString('de-DE', { hour: '2-digit', minute: '2-digit' });
-                                    }),                                                             
-                                    datasets: [{
-                                        label: 'Stromverbrauch in kW/h',
-                                        data: values.map(messwert => messwert.value),
-                                        borderColor: 'rgba(175, 235, 173)',
-                                        backgroundColor: 'rgba(175, 235, 173, 0.5)',
-                                        fill: true
-                                    }]
-                                },
-                                options: {
-                                    plugins: {
-                                        title: {
-                                            display: true,
-                                            text: 'Monatsansicht',
-                                            position: 'top',
-                                            font: {
-                                                size: 20, 
-                                            },
-                                        },
-                                    },
-                                    responsive: true,
-                                    scales: {
-                                        y: {
-                                            beginAtZero: true,
-                                            ticks: {
-                                                stepSize: 200,
-                                                min: 0,
-                                                max: 18
-                                            }
-                                        }
-                                    },  
-                                }
-                            });
+                            display_month_chart({{forloop.counter}}, {{ contract.measurement_point.current_readings.month|safe}});
                         </script>
 
                         <!-- Zweites Diagramm -->
-                        <canvas id="myLineChart2" style="width:100%; height: 100px;"></canvas>
+                        <canvas id="myLineChart_day_{{forloop.counter}}" style="width:100%; height: 100px;"></canvas>
                         <script>
-                            var ctx2 = document.getElementById('myLineChart2').getContext('2d');
-                            var myLineChart2 = new Chart(ctx2, {
-                                type: 'line',
-                                data: {
-                                    labels: values.map(messwert => {
-                                        let date = new Date(messwert.timestamp);
-                                        return date.toLocaleDateString('de-DE') + ' - ' + date.toLocaleTimeString('de-DE', { hour: '2-digit', minute: '2-digit' });
-                                    }),                                                             
-                                    datasets: [{
-                                        label: 'Stromverbrauch in kW/h',
-                                        data: values.map(messwert => messwert.value),
-                                        borderColor: 'rgba(175, 235, 173)',
-                                        backgroundColor: 'rgba(175, 235, 173, 0.5)',
-                                        fill: true
-                                    }]
-                                },
-                                options: {
-                                    plugins: {
-                                        title: {
-                                            display: true,
-                                            text: 'Tagesansicht',
-                                            position: 'top',
-                                            font: {
-                                                size: 20, 
-                                            },
-                                        },
-                                    },
-                                    responsive: true,
-                                    scales: {
-                                        y: {
-                                            beginAtZero: true,
-                                            ticks: {
-                                                stepSize: 200,
-                                                min: 0,
-                                                max: 18
-                                            }
-                                        }
-                                    },  
-                                }
-                            });
+                            display_day_chart({{forloop.counter}}, {{ contract.measurement_point.current_readings.day|safe}});
                         </script>
                         
                     </div>
                 </div>
-
             </div>
+            {% endfor %}
         </div>
     </div>
     
