--- a/Project/electricity-provider/templates/ui_new_contract_page.html
+++ b/Project/electricity-provider/templates/ui_new_contract_page.html
@@ -167,9 +167,11 @@ Contract
         </div>
 
         <div class="d-flex justify-content-center mt-4">
+          <a href="/contract" class="btn btn-secondary">Cancel</a>
           <input type="submit" value="Create Contract" class="btn btn-primary">
         </div>
 
+        
       </form>
         
     </div>
