--- a/Project/electricity-provider/templates/ui_contract_page.html
+++ b/Project/electricity-provider/templates/ui_contract_page.html
@@ -90,10 +90,9 @@ Contract
 </div>
 -->
 
-<div class="d-flex justify-content-center" style="margin-top: 20px;">
+<!-- <div class="d-flex justify-content-center" style="margin-top: 20px;">
   <a type="button" class="btn btn-primary" href="/contract/new/">Create Contract</a>
-  <!-- Link für das Fenster oben <a href="#" data-bs-toggle="modal" data-bs-target="#testForFailedLogin">Test</a> -->
-</div>
+</div> -->
 
 {% for contract in contracts %}
 <div class="container mt-md mb-md">
@@ -168,6 +167,13 @@ Contract
       </div>
   </div>
 </div>
+{% empty %}
+  <div class="card">
+      <div class="card-header text-center">
+          No active Contracts
+      </div>
+  </div>
+
 {% endfor %}
 
 <script>
