minor ui changes (lables and stuff)

--- a/Project/electricity-provider/templates/ui_contract_page.html
+++ b/Project/electricity-provider/templates/ui_contract_page.html
@@ -100,7 +100,7 @@ Contract
       <div class="col align">
           <div class="card">
             <div class="card-header d-flex justify-content-between" data-bs-toggle="collapse" href="#collapseExample{{ forloop.counter }}" role="button" aria-expanded="false" aria-controls="collapseExample{{ forloop.counter }}">
-                  <div>{{contract.measurement_point.meter_uid}}</div>
+                  <div>Contract-Nr.: {{contract.measurement_point.meter_uid}}</div>
                   <!-- hier muss die Anzeige hin welchen Status der Zähler hat -->
                   <div>{{contract.tariff}}</div>
                   <div>{{contract.user.email}}</div>
