--- a/Project/electricity-provider/templates/ui_contract_page.html
+++ b/Project/electricity-provider/templates/ui_contract_page.html
@@ -157,7 +157,7 @@ Contract
 
                   <div class="row">
                     <div class="col" style="text-align: center;">
-                      <a type="button" class="btn btn-primary" href="/customer/">Zur Stromübersicht</a>
+                      <a type="button" class="btn btn-primary" href="/customer/">Electricity Overview</a>
                       <button type="button" id="cancelContract_{{forloop.counter}}" data-contract-id="{{ contract.id }}" class="cancelContract btn btn-danger">Cancel Contract</button>
                     </div>
                   </div>
