Update New Contract Layout

--- a/Project/electricity-provider/templates/ui_new_contract_page.html
+++ b/Project/electricity-provider/templates/ui_new_contract_page.html
@@ -153,7 +153,7 @@ Contract
           <div class="col">
             <label for="account_owner" class="form-label">Account owner:</label>
             <input type="text" id="account_owner" name="account_owner" class="form-control">
-          </div>
+        </div>
           
           <div class="col">
             <label for="iban" class="form-label">IBAN:</label>
@@ -168,10 +168,9 @@ Contract
 
         <div class="d-flex justify-content-center mt-4">
           <a href="/contract" class="btn btn-secondary">Cancel</a>
+          <div style="width: 10px;"></div>
           <input type="submit" value="Create Contract" class="btn btn-primary">
         </div>
-
-        
       </form>
         
     </div>
