--- a/Project/electricity-provider/templates/ui_main_page.html
+++ b/Project/electricity-provider/templates/ui_main_page.html
@@ -1,3 +1,4 @@
+<!-- This template extends the "base.html" template and represents the main page of the electricity provider website. It contains blocks for the title, header for logged in and not logged in users, and the main content of the page. The main content includes sections about the company's commitment to sustainability, harnessing nature's gifts, and empowering communities. It also includes a section introducing the team members. -->
 {%  extends "base.html" %}
 
 {% block titel %}
