--- a/Project/electricity-provider/templates/ui_pricing_page.html
+++ b/Project/electricity-provider/templates/ui_pricing_page.html
@@ -1,3 +1,5 @@
+<!-- This template extends the "base.html" template and displays the pricing page of the electricity provider website. It includes navigation bars for both logged in and not logged in users. The body of the page contains information about different pricing plans offered by the provider, including the consumption price and the percentage of renewable energy for each plan. -->
+
 {%  extends "base.html" %}
 
 {% block titel %}
