--- a/Project/electricity-provider/templates/base.html
+++ b/Project/electricity-provider/templates/base.html
@@ -8,6 +8,7 @@
     {% bootstrap_css %}
     {% bootstrap_javascript %}
 
+    <!-- CSRF token -->
     <meta name="csrf-token" content="{{ csrf_token }}">
 
     <script>
