--- a/Project/electricity-provider/templates/ui_contract_page.html
+++ b/Project/electricity-provider/templates/ui_contract_page.html
@@ -1,24 +1,27 @@
+<!-- This template extends the "base.html" template and displays the contract page. It includes a navigation bar, a modal for password confirmation, and a list of contracts. Each contract is displayed in a card with detailed information. Users can cancel a contract by entering their password and confirming the cancellation. -->
+
 {%  extends "base.html" %}
 
 {% block titel %}
 Contract
 {% endblock %}
 
-
 {% block header_logged_in %}
-
+<!-- Navigation bar -->
 {% load static %}
 <link rel="stylesheet" href="{% static 'css/custom.css' %}">
 
-
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <!-- Logo -->
   <div class="container">
     <a class="navbar-brand" href="/">
       <img src="https://www.pngall.com/wp-content/uploads/2016/07/Sun-PNG-Clipart.png" alt="Logo" class="logo" style="width: 50px;">
     </a>
+    <!-- Toggle button for mobile view -->
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
+    <!-- Navigation links -->
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ms-auto">
         <li class="nav-item">
@@ -45,10 +48,8 @@ Contract
 </nav>
 {% endblock %}
 
-
 {% block body %}
-
-
+<!-- Modal for password confirmation -->
 <div class="modal fade" id="passwordModal" tabindex="-1" aria-labelledby="modalTitle" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
@@ -72,36 +73,15 @@ Contract
         </div>
     </div>
 </div>
-<!-- Code für die Ansicht, dass es versuchte Loginversuche gab, muss auf das USER DASHBOARD!!! 
-<div class="modal fade" id="testForFailedLogin" tabindex="-1" aria-labelledby="modalTitle" aria-hidden="true">
-  <div class="modal-dialog">
-      <div class="modal-content">
-          <div class="modal-header">
-              <h5 class="modal-title" id="modalTitle">Warnung!</h5>
-              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-          </div>
-          <div class="modal-body">
-              <p id="modalMessage" style="font-size: 20px;">
-                Es gab <strong>{{ failed_login_attempts }}</strong> fehlgeschlagene Anmeldeversuche seid ihrem letzten Login!
-              </p>
-          </div>
-      </div>
-  </div>
-</div>
--->
-
-<!-- <div class="d-flex justify-content-center" style="margin-top: 20px;">
-  <a type="button" class="btn btn-primary" href="/contract/new/">Create Contract</a>
-</div> -->
 
 {% for contract in contracts %}
+<!-- Contract cards -->
 <div class="container mt-md mb-md">
   <div class="row">
       <div class="col align">
           <div class="card">
             <div class="card-header d-flex justify-content-between" data-bs-toggle="collapse" href="#collapseExample{{ forloop.counter }}" role="button" aria-expanded="false" aria-controls="collapseExample{{ forloop.counter }}">
                   <div>Contract-Nr.: {{contract.measurement_point.meter_uid}}</div>
-                  <!-- hier muss die Anzeige hin welchen Status der Zähler hat -->
                   <div>{{contract.tariff}}</div>
                   <div>{{contract.user.email}}</div>
             </div>
@@ -168,15 +148,16 @@ Contract
   </div>
 </div>
 {% empty %}
-  <div class="card">
-      <div class="card-header text-center">
-          No active Contracts
-      </div>
-  </div>
-
+<!-- No active contracts message -->
+<div class="card">
+    <div class="card-header text-center">
+        No active Contracts
+    </div>
+</div>
 {% endfor %}
 
 <script>
+  // JavaScript code for canceling a contract
   $('.cancelContract').on('click', function(event){
       event.preventDefault();
       $('#action').val('cancelContract');
@@ -235,7 +216,6 @@ Contract
           }
       });
   }
-  
 </script>
 
 {% endblock %}
