--- a/Project/electricity-provider/templates/ui_login_page.html
+++ b/Project/electricity-provider/templates/ui_login_page.html
@@ -1,3 +1,4 @@
+<!-- This template extends the "base.html" template and displays a login page. It includes a navigation bar, a login form, and JavaScript code for handling form submission using AJAX. -->
 
 {%  extends "base.html" %}
 
@@ -5,14 +6,12 @@
 Login
 {% endblock %}
 
-
-
-
 {% block header_not_logged_in %}
-    {% load static %}
-    <link rel="stylesheet" href="{% static 'css/login.css' %}">
+  {% load static %}
+  <link rel="stylesheet" href="{% static 'css/login.css' %}">
 
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <!-- Navigation bar -->
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container">
       <a class="navbar-brand" href="/">
         <img src="https://www.pngall.com/wp-content/uploads/2016/07/Sun-PNG-Clipart.png" alt="Logo" class="logo" style="width: 50px;">
@@ -39,74 +38,56 @@ Login
 
 {% block body %}
 
+<!-- Login form -->
 <div class="container d-flex justify-content-center align-items-center vh-100">
-    <div class="row">
-        <div class="col-12 col-md-14"> <!-- Adjusted the column size for a wider frame -->
-            <div class="card p-4 bg-light" style="width: calc(100% + 150px);">
-                <form id="loginForm" method="POST" action="http://localhost:8000/api/v1/auth/">
-                    <h2 class="text-center mb-4">Login</h2>
-                    {% csrf_token %}
-                    <div class="mb-3">
-                        <label for="username" class="form-label">E-Mail:</label>
-                        <input type="text" class="form-control" id="username" name="username">
-                    </div>
-                    <div class="mb-3">
-                        <label for="password" class="form-label">Password:</label>
-                        <input type="password" class="form-control" id="password" name="password">
-                    </div>
-                    <div class="d-grid">
-                        <input type="submit" class="btn btn-primary" value="Submit">
-                    </div>
-                </form>
-            </div>
-        </div>
+  <div class="row">
+    <div class="col-12 col-md-14"> <!-- Adjusted the column size for a wider frame -->
+      <div class="card p-4 bg-light" style="width: calc(100% + 150px);">
+        <form id="loginForm" method="POST" action="http://localhost:8000/api/v1/auth/">
+          <h2 class="text-center mb-4">Login</h2>
+          {% csrf_token %}
+          <div class="mb-3">
+            <label for="username" class="form-label">E-Mail:</label>
+            <input type="text" class="form-control" id="username" name="username">
+          </div>
+          <div class="mb-3">
+            <label for="password" class="form-label">Password:</label>
+            <input type="password" class="form-control" id="password" name="password">
+          </div>
+          <div class="d-grid">
+            <input type="submit" class="btn btn-primary" value="Submit">
+          </div>
+        </form>
+      </div>
     </div>
+  </div>
 </div>
 
+<!-- JavaScript code for handling form submission using AJAX -->
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 <script>
-    $(document).ready(function () {
-        $('#loginForm').on('submit', function(event){
-            event.preventDefault();
-            $.ajax({
-                type: 'POST',
-                url: $(this).attr('action'),
-                data: JSON.stringify({
-                    username: $('#username').val(),
-                    password: $('#password').val()
-                }),
-                contentType: 'application/json',
-                dataType: 'json',
-                success: function(data) {
-                    // Redirect to the /customer page after successful login
-                    window.location.href = "/customer";
-                },
-                error: function(jqXHR, textStatus, errorThrown) {
-                    // Display an error message
-                    alert('Login failed: ' + errorThrown);
-                }
-            });
-        });
+  $(document).ready(function () {
+    $('#loginForm').on('submit', function(event){
+      event.preventDefault();
+      $.ajax({
+        type: 'POST',
+        url: $(this).attr('action'),
+        data: JSON.stringify({
+          username: $('#username').val(),
+          password: $('#password').val()
+        }),
+        contentType: 'application/json',
+        dataType: 'json',
+        success: function(data) {
+          // Redirect to the /customer page after successful login
+          window.location.href = "/customer";
+        },
+        error: function(jqXHR, textStatus, errorThrown) {
+          // Display an error message
+          alert('Login failed: ' + errorThrown);
+        }
+      });
     });
+  });
 </script>
 {% endblock %}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
