--- a/Project/electricity-provider/templates/ui_new_contract_page.html
+++ b/Project/electricity-provider/templates/ui_new_contract_page.html
@@ -208,6 +208,7 @@ Contract
                       account_owner: $('#account_owner').val(),
                       iban: $('#iban').val(),
                       bic: $('#bic').val(),
+                      name: $('#account_owner').val()
                   },
               }),
               contentType: 'application/json',
