--- a/Project/electricity-provider/templates/ui_register_page.html
+++ b/Project/electricity-provider/templates/ui_register_page.html
@@ -42,20 +42,20 @@ Register
           <h2 class="text-center mb-4">Registrierung</h2>
           {% csrf_token %}
           <div class="mb-3">
-            <label for="first_name" class="form-label">Firstname:</label>
-            <input type="text" class="form-control" id="first_name" name="first_name">
+            <label for="first_name" class="form-label">Firstname*:</label>
+            <input type="text" class="form-control" id="first_name" name="first_name" required>
           </div>
           <div class="mb-3">
-            <label for="last_name" class="form-label">Lastname:</label>
-            <input type="text" class="form-control" id="last_name" name="last_name">
+            <label for="last_name" class="form-label">Lastname*:</label>
+            <input type="text" class="form-control" id="last_name" name="last_name" required>
           </div>
           <div class="mb-3">
-            <label for="email" class="form-label">Email:</label>
-            <input type="email" class="form-control" id="email" name="email">
+            <label for="email" class="form-label">Email*:</label>
+            <input type="email" class="form-control" id="email" name="email" required>
           </div>
           <div class="mb-3">
-            <label for="password" class="form-label">Password:</label>
-            <input type="password" class="form-control" id="password" name="password">
+            <label for="password" class="form-label">Password*:</label>
+            <input type="password" class="form-control" id="password" name="password" required>
           </div>
           <div class="d-grid">
             <input type="submit" class="btn btn-primary" value="Submit">
