added calculation of current month consumption and costs

--- a/Project/electricity-provider/templates/ui_contract_page.html
+++ b/Project/electricity-provider/templates/ui_contract_page.html
@@ -99,7 +99,7 @@ Contract
                           {{contract.first_name}} {{contract.last_name}} <br>
                           {{contract.start_date}} - {{contract.end_date}} <br>
                           {{contract.price}} Cent/kWh <br>
-                          {{contract.current_costs}} Euro ({{contract.current_month_name}})
+                          {{contract.current_month_costs}} Euro ({{contract.current_month_name}})
                         </div>
                     </div>
 
